/*
 * $Id: ChangeLog,v 1.1270 2003/07/19 22:12:31 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-20 19:50 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/fm.c
  * source/vm/hvm.c
  * source/vm/memvars.c
  * source/vm/thread.c
    ! AT LAST I have fixed xgrab/xfree/stack sequence at initialization
      and closing of the VM. This allows threads to use hb_xgrab family
      function instad of malloc/free to setup their private stacks.
      The fact of using malloc before caused also an internal error in
      hb_xrealloc when stack had to be expanded in an hb_stackPush()
      operations, if statistics were on.
      This also reduces the need of the SAFE_ALLOC mutex, and confines
      it to fm.c, reducing greatly the risk of cross lockings.


2003-07-20 00:01 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * config/w32/global.cf
    ! Wasn't building the directory gcc_mt under CMD environment. Fixed. 

  * include/hbdefs.h
    ! gcc is not able to see a typedef in #if defined(), so if the _winnt_h
      is declared, LONGLONG must not be redefined

  * include/hbapi.h
  * include/thread.h
    ! hb_memvarRelese() is now thread-specific

  * source/vm/hvm.c
  * source/vm/memvars.c
  * source/vm/thread.c
    ! fixed vmQuit phase under MT. Still, I have not been able to release
      memvar's data at the end of a thread. Help is needed here;
      For the moment, MT programs using memvars should set them to 0 before
      thread termination.
  
  * source/vm/fm.c
    + added a comment about thread termination sequence.

2003-07-19 09:19 UTC+0200 Francesco Saverio Giudice <info@fsgiudice.com>
  * utils/hbdict/hbdict.prg
    + Updated hbdict:
      ! Moved Class Definition to end of file to make MAIN() procedure first proc.

2003-07-19 04:20 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>